Go on with text

--- a/references.bib
+++ b/references.bib
@@ -40,3 +40,21 @@
   year    = "2019",
   url     = "https://kazemnejad.com/blog/transformer_architecture_positional_encoding/"
 }
+
+@article{sohl-dickstein2015,
+	title = {Deep Unsupervised Learning using Nonequilibrium Thermodynamics},
+	author = {Sohl-Dickstein, Jascha and Weiss, Eric A. and Maheswaranathan, Niru and Ganguli, Surya},
+	year = {2015},
+	date = {2015},
+	doi = {10.48550/ARXIV.1503.03585},
+	url = {https://arxiv.org/abs/1503.03585}
+}
+
+@article{weng2021diffusion,
+  title   = "What are diffusion models?",
+  author  = "Weng, Lilian",
+  journal = "lilianweng.github.io",
+  year    = "2021",
+  month   = "Jul",
+  url     = "https://lilianweng.github.io/posts/2021-07-11-diffusion-models/"
+}
