--- a/README.qmd
+++ b/README.qmd
@@ -1,11 +1,9 @@
 ---
-title: "Denoising Diffusion Implicit Models"
+title: "Denoising Diffusion Models"
 format: gfm
 editor: visual
 bibliography: references.bib
 ---
-
-# Denoising Diffusion Models
 
 This repository contains a torch/luz implementation of the Denoising Diffusion Implicit Models. Code in this repository is heavily influenced by code in @kerasDDIM which is mostly based on [@song2020] with a few ideas coming from [@nichol2021] and [@karras2022].
 
@@ -26,7 +24,7 @@ One important property of this process is that you can easily sample from $q(x_t
 $$q(x_t | x_0) = \mathcal{N}(\sqrt{\alpha_t}x_0, \sqrt{1-\alpha_t}I)$$
 And thus, $x_t$ can be expressed as a linear combination of $x_0$ and a gaussian noise variable $\epsilon = \mathcal{N}(0, I)$:
 
-$$x_t = \sqrt{\alpha_t}x_0 + \sqrt{1-\alpha_t}*\epsilon$$
+$$x_t = \sqrt{\alpha_t}x_0 + \sqrt{1-\alpha_t}\epsilon$$
 
 ## Sinusoidal embedding
 
