--- a/references.bib
+++ b/references.bib
@@ -58,3 +58,21 @@
   month   = "Jul",
   url     = "https://lilianweng.github.io/posts/2021-07-11-diffusion-models/"
 }
+
+@article{bansal2022,
+	title = {Cold Diffusion: Inverting Arbitrary Image Transforms Without Noise},
+	author = {Bansal, Arpit and Borgnia, Eitan and Chu, Hong-Min and Li, Jie S. and Kazemi, Hamid and Huang, Furong and Goldblum, Micah and Geiping, Jonas and Goldstein, Tom},
+	year = {2022},
+	date = {2022},
+	doi = {10.48550/ARXIV.2208.09392},
+	url = {https://arxiv.org/abs/2208.09392}
+}
+
+@article{ho2020,
+	title = {Denoising Diffusion Probabilistic Models},
+	author = {Ho, Jonathan and Jain, Ajay and Abbeel, Pieter},
+	year = {2020},
+	date = {2020},
+	doi = {10.48550/ARXIV.2006.11239},
+	url = {https://arxiv.org/abs/2006.11239}
+}
