Add setting schedule section.

--- a/README.qmd
+++ b/README.qmd
@@ -19,21 +19,48 @@ $$q(x_{t} | x_{t-1}) = \mathcal{N}(x_{t-1} \sqrt{1 - \beta_t}, I\beta_t )$$ wher
 
 One important property of this process is that you can easily sample from $q(x_t | x_0)$. Using a reparametrization trick derived in [@ho2020] (see also [@weng2021diffusion]) one can express:
 
-$$q(x_t | x_0) = \mathcal{N}(\sqrt{\alpha_t}x_0, \sqrt{1-\alpha_t}I)$$ And thus, $x_t$ can be expressed as a linear combination of $x_0$ and a Gaussian noise variable $\epsilon = \mathcal{N}(0, I)$:
+$$q(x_t | x_0) = \mathcal{N}(\sqrt{\bar{\alpha_t}}x_0, \sqrt{1-\bar{\alpha_t}}I)$$ And thus, $x_t$ can be expressed as a linear combination of $x_0$ and a Gaussian noise variable $\epsilon = \mathcal{N}(0, I)$:
 
-$$x_t = \sqrt{\alpha_t}x_0 + \sqrt{1-\alpha_t}\epsilon$$
+$$x_t = \sqrt{\bar{\bar{\alpha_t}}}x_0 + \sqrt{1-\bar{\alpha_t}}\epsilon$$
 
 ### Setting the diffusion rate
 
-The diffusion rate $\alpha_t$ schedule is in general a decreasing sequence of values, such that when $t$ is large $x_t$ is almost pure noise. In our implementation the schedule is defined in terms of a continuous time variable so that we can change the number of diffusion steps as much as needed during sampling. $\alpha_t$ is interpreted as the proportion of variance that comes from the original image ($x_0$) in $x_t$.
+The diffusion rate $\bar{\alpha_t}$ schedule is in general a decreasing sequence of values, such that when $t$ is large, $x_t$ is almost pure noise. In our implementation the schedule is defined in terms of a continuous time variable so that we can change the number of diffusion steps as much as needed during sampling. $\bar{\alpha_t}$ is interpreted as the proportion of variance that comes from the original image ($x_0$) in $x_t$.
 
-In @song2020 and @ho2020, $(\alpha_t)^2$ varies linearly from 1 to 0 with the number of diffusion steps.
-@nichol2021 proposes that a cosine schedule can lead to better model performance.
+In @song2020 and @ho2020, a so called linear schedule is used. However the linearity is happening on $\beta_t$ - before the reparametrization. Thus, $\bar{\alpha_t}$ under the linear schedule doesn't vary linearly. @nichol2021 proposes that a cosine schedule can lead to better model performance, the cosine schedule is applied directly in $\bar{\alpha_t}$.
 
 Below we can visualize the forward diffusion process with both the linear and cosine scheduling for 10 diffusion steps.
 
-```{r}
+```{r schedules, echo=FALSE, out.width="704px", out.height="128px"}
+#| fig-cap: Samples from $q(x_t|x_0)$ for linearly spaced values of $t$ with linear schedule (top) and the cosine schedule (bottom). We can see that with the linear schedule, images become almost pure noise after the first half - this seems to interfere in model performance according to @nichol2021 .
+box::use(torch[...])
+box::use(./diffusion[diffusion_schedule])
+box::use(./dataset[make_dataset])
+box::use(zeallot[...])
+box::use(./callbacks[plot_tensors])
 
+torch_manual_seed(1)
+set.seed(1)
+
+fitted <- luz::luz_load("luz_model.luz")
+fitted$model$eval()
+c(train_data, valid_data) %<-% make_dataset("flowers", c(64, 64))
+
+img <- train_data[1]$x$view(c(1,3,64,64))
+
+diffusion_times <- torch_tensor(seq(0, 1, length.out = 11))$view(c(-1, 1, 1, 1))
+img <- fitted$model$normalize(img)
+noise <- torch_randn(11, 3, 64, 64)
+
+noisy_images <- lapply(c("linear", "cosine"), function(schedule_type) {
+  schedule <- diffusion_schedule(schedule_type, 0, 1)
+  rates <- schedule(diffusion_times)
+  rates$signal*img + rates$noise*noise
+})
+noisy_images <- torch_cat(noisy_images, dim = 1)
+noisy_images <- fitted$model$normalize$denormalize(noisy_images)
+
+plot_tensors(noisy_images, ncol = 11)
 ```
 
 ## Sinusoidal embedding
