--- a/references.bib
+++ b/references.bib
@@ -76,3 +76,30 @@
 	doi = {10.48550/ARXIV.2006.11239},
 	url = {https://arxiv.org/abs/2006.11239}
 }
+
+@article{ronneberger2015,
+	title = {U-Net: Convolutional Networks for Biomedical Image Segmentation},
+	author = {Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
+	year = {2015},
+	date = {2015},
+	doi = {10.48550/ARXIV.1505.04597},
+	url = {https://arxiv.org/abs/1505.04597}
+}
+
+@article{he2015,
+	title = {Deep Residual Learning for Image Recognition},
+	author = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+	year = {2015},
+	date = {2015},
+	doi = {10.48550/ARXIV.1512.03385},
+	url = {https://arxiv.org/abs/1512.03385}
+}
+
+@article{vaswani2017,
+	title = {Attention Is All You Need},
+	author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, Lukasz and Polosukhin, Illia},
+	year = {2017},
+	date = {2017},
+	doi = {10.48550/ARXIV.1706.03762},
+	url = {https://arxiv.org/abs/1706.03762}
+}
