Fix Latex + identation

--- a/README.qmd
+++ b/README.qmd
@@ -65,7 +65,7 @@ noisy_images <- fitted$model$normalize$denormalize(noisy_images)
 plot_tensors(noisy_images, ncol = 11)
 ```
 
-Also in practice, we never let $\bar{\alpha_t}} = 0$ or $\bar{\alpha_t}} = 1$ and instead limit it into a minimum and maximum signal rate to avoid training stability issues.
+Also in practice, we never let $\bar{\alpha_t} = 0$ or $\bar{\alpha_t} = 1$ and instead limit it into a minimum and maximum signal rate to avoid training stability issues.
 
 ## Reverse diffusion
 
@@ -126,9 +126,7 @@ Although denoising diffusion models can work with whatever kind of data distribu
 
 Since we are dealing with images, we will use neural network architectures that are adapted for that domain. The neural network we are building takes a noisy image sampled from $q(x_t|x_0)$ and the variance $\bar{\alpha_t}$ and returns an estimate $\hat{\epsilon}$. Both $x_t$ and $\epsilon$ have the same dimensions which is 3D tensors with $(C, H, W)$ where $C=3$ is the number of channels and $H$ and $W$ are respectively the height and width of the images. Typically $H=W$ since we are going to use squared images.
 
-The core part of the neural network is a U-Net [@ronneberger2015], which is a common architecture in domains where both the input and the output are image-like tensors. The U-Net takes as input a concatenation of $x_t$ with the sinusoidal embedding [@vaswani2017] of $1 - \bar{\alpha_t}$.
-Embedding the noise variance into the model is very important as it allows the network to be sensible to different amount of noise, and thus being able to make good estimates for $x_{t-1}$ no matter the actual $t$.
-The output of the U-Net is then passed to a simple convolution layer that just processes it into a lower depth version.
+The core part of the neural network is a U-Net [@ronneberger2015], which is a common architecture in domains where both the input and the output are image-like tensors. The U-Net takes as input a concatenation of $x_t$ with the sinusoidal embedding [@vaswani2017] of $1 - \bar{\alpha_t}$. Embedding the noise variance into the model is very important as it allows the network to be sensible to different amount of noise, and thus being able to make good estimates for $x_{t-1}$ no matter the actual $t$. The output of the U-Net is then passed to a simple convolution layer that just processes it into a lower depth version.
 
 ### Sinusoidal embedding
 
@@ -146,24 +144,22 @@ noise_power <- schedule(diffusion_times)$noise^2
 embeddings <- embedding(noise_power)$add(1)$div(2)$squeeze(3)$squeeze(3)
 heatmap(as.array(embeddings), Rowv=NA, Colv=NA, col = colorspace::diverge_hsv(50), scale = "none", labRow = sprintf("%.2f", seq(0,1,length.out = 100)), margins = c(1.4,1))
 ```
+
 You can find the code dor the sinusoidal embedding in `diffusion.R`.
 
 ### U-Net
 
-A U-Net is a convolutional neural network that successively downsamples the image resolution while increasing its depth. After a few downsampling blocks, it starts upsampling the representation and decreasing the channels depth.
-The main idea in U-Net, is that much like Residual Networks, the upsampling blocks take as input both the representation from the previous upsampling block and the representation from a previous downsampling block.
+A U-Net is a convolutional neural network that successively downsamples the image resolution while increasing its depth. After a few downsampling blocks, it starts upsampling the representation and decreasing the channels depth. The main idea in U-Net, is that much like Residual Networks, the upsampling blocks take as input both the representation from the previous upsampling block and the representation from a previous downsampling block.
 
-![Unet model](https://blogs.rstudio.com/ai/posts/2019-08-23-unet/images/unet.png){width=50%}
+![Unet model](https://blogs.rstudio.com/ai/posts/2019-08-23-unet/images/unet.png){width="50%"}
 
 Unlike the original U-Net implementation, we use ResNet Blocks [@he2015] in the downsampling and upsampling blocks of the U-Net. Each down or upsampling blocks contain *block_depth* of those ResNet blocks. We also use the [Swish activation](https://en.wikipedia.org/wiki/Swish_function) function.
 
-[@song2020] and [@ho2020] also use an attention layer at lower resolutions, but we didn't for simplicity.
-The code for the U-Net can be found in `unet.R`.
+[@song2020] and [@ho2020] also use an attention layer at lower resolutions, but we didn't for simplicity. The code for the U-Net can be found in `unet.R`.
 
-## NN module
+### NN module
 
-Given the definitions of `unet` and the `sinusoidal_embedding` we can implement the
-diffusion model with:
+Given the definitions of `unet` and the `sinusoidal_embedding` we can implement the diffusion model with:
 
 ```{r, echo=FALSE}
 box::use(./diffusion[diffusion])
@@ -171,7 +167,8 @@ box::use(./diffusion[diffusion])
 
 ```{r, eval = FALSE}
 diffusion <- nn_module(
-  initialize = function(image_size, embedding_dim = 32, widths = c(32, 64, 96, 128), block_depth = 2) {
+  initialize = function(image_size, embedding_dim = 32, widths = c(32, 64, 96, 128), 
+                        block_depth = 2) {
     self$unet <- unet(2*embedding_dim, embedding_dim, widths = widths, block_depth)
     self$embedding <- sinusoidal_embedding(embedding_dim = embedding_dim)
 
@@ -205,8 +202,6 @@ diffusion(image_size = c(3, 64, 64))
 ```
 
 ## Training
-
-
 
 ## Sampling images
 
