--- a/references.bib
+++ b/references.bib
@@ -103,3 +103,12 @@
 	doi = {10.48550/ARXIV.1706.03762},
 	url = {https://arxiv.org/abs/1706.03762}
 }
+
+@article{binkowski2018,
+	title = {Demystifying MMD GANs},
+	author = {{Bi{\'{n}}kowski}, {Miko{\l}aj} and Sutherland, Danica J. and Arbel, Michael and Gretton, Arthur},
+	year = {2018},
+	date = {2018},
+	doi = {10.48550/ARXIV.1801.01401},
+	url = {https://arxiv.org/abs/1801.01401}
+}
