Add more details.

--- a/README.qmd
+++ b/README.qmd
@@ -312,20 +312,55 @@ runs |>
 We can see that given that the other hyper-parameters are fixed, it's better to train the neural network on the MAE of the noises using a cosine schedule. Below we compare images generated for each different run. The ordering is the same as the table above, so you can visualize the effect of different values of KID.
 
 ```{r samples_per_experiment}
-images <- runs$dir |> 
-  lapply(function(x) {
-    model <- luz::luz_load(file.path(x, "luz_model.luz"))
-    with_no_grad({
-      model$model$eval()
-      model$model$generate(8, diffusion_steps=20)  
+# we implement it at as a function so we can reuse for the pets dataset.
+plot_samples_from_runs <- function(runs) {
+  images <- runs$dir |> 
+    lapply(function(x) {
+      model <- luz::luz_load(file.path(x, "luz_model.luz"))
+      with_no_grad({
+        model$model$eval()
+        model$model$generate(8, diffusion_steps=20)  
+      })
     })
-  })
-
-images |>
-  lapply(function(x) torch::torch_unbind(x)) |>
-  unlist() |>
-  plot_tensors(ncol = 8, denormalize = identity)
+  
+  images |>
+    lapply(function(x) torch::torch_unbind(x)) |>
+    unlist() |>
+    plot_tensors(ncol = 8, denormalize = identity)
+}
+plot_samples_from_runs(runs)
 ```
+
+Below we also show the results fro the Oxford pets dataset:
+
+```{r}
+pet_runs <- guildai::runs_info(label = "pets_exp1")
+pet_runs |> 
+  tidyr::unpack(c(flags, scalars)) |> 
+  dplyr::select(
+    loss = loss, 
+    loss_on = loss_on, 
+    schedule_type = schedule_type,
+    noise_loss,
+    image_loss,
+    kid
+  ) %>% 
+  knitr::kable()
+```
+
+Again, the images below are ordered the same way as the above table, each row
+representing a different experiment configuration.
+
+```{r}
+plot_samples_from_runs(pet_runs)
+```
+Even though the results for the second dataset are not really impressive, using larger
+models is likely to improve the quality of the generated images.
+
+We confirm that most of the practical decisions from the literature, like reducing the
+noise loss instead of the image loss, using a cosine schedule instead of the linear
+schedule can be reproduced and shown to be better than the alternatives.
+
 
 ## Sampling images
 
